--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ a:hover {
 
 .start {
   font-size: 1.5rem;
+	padding: 15px;
 }
 
 h1 {
@@ -58,7 +59,7 @@ h1 {
   margin: 10px;
 }
 
-.time-btn {
+.time-btn, .btn {
   background-color: transparent;
   border: 2px solid #C0C0C0;
   color: #fff;
@@ -66,6 +67,7 @@ h1 {
   font-family: inherit;
   padding: .5rem 1rem;
   font-size: 1.5rem;
+	border-radius: 4px;
 }
 
 .time-btn:hover {
@@ -88,7 +90,7 @@ h1 {
   position: relative;
   width: 500px;
   height: 500px;
-  background: linear-gradient(118.38deg, #29323C -4.6%, #485563 200.44%);
+  background: linear-gradient(118.38deg, #4c7099 -4.6%, #0376f1 200.44%);
   box-shadow: -8px -8px 20px #2A333D, 10px 7px 20px #475462;
   border-radius: 30px;
   overflow: hidden;
@@ -99,4 +101,16 @@ h1 {
   position: absolute;
   border-radius: 50%;
   cursor: pointer;
+}
+
+/* Button */
+.third {
+  border-color: #3498db;
+  color: #fff;
+  box-shadow: 0 0 40px 40px #3498db inset, 0 0 0 0 #3498db;
+  -webkit-transition: all 150ms ease-in-out;
+  transition: all 150ms ease-in-out;
+}
+.third:hover {
+  box-shadow: 0 0 10px 0 #3498db inset, 0 0 10px 4px #3498db;
 }
